--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -8,20 +8,10 @@
 
     <ImageView
         android:id="@+id/movie_image"
-        android:layout_width="180dp"
-        android:layout_height="170dp"
+        android:layout_width="100dp"
+        android:layout_height="130dp"
         android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
+        android:background="@drawable/corners_image_view"
         tools:src="@drawable/ic_launcher_background" />
-
-    <TextView
-        android:id="@+id/movie_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Мстители: Финал"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_marginTop="8dp" />
 
 </LinearLayout>
