--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -17,6 +17,6 @@
         android:id="@+id/nav_account"
         android:icon="@drawable/ic_person"
         android:orderInCategory="3"
-        android:title="@string/acсount_label" />
+        android:title="@string/accaunt_label" />
 
 </menu>
