--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -14,6 +14,12 @@
         android:title="@string/movies_label" />
 
     <item
+        android:id="@+id/nav_map"
+        android:icon="@drawable/ic_map"
+        android:orderInCategory="3"
+        android:title="@string/cine_label" />
+
+    <item
         android:id="@+id/nav_account"
         android:icon="@drawable/ic_person"
         android:orderInCategory="3"
