--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_margin="12dp">
+    android:layout_margin="12dp"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/movie_image"
-        android:layout_width="100dp"
-        android:layout_height="130dp"
-        android:scaleType="centerCrop"
+        android:id="@+id/movie_item_image"
+        android:layout_width="150dp"
+        android:layout_height="190dp"
         android:background="@drawable/corners_image_view"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_launcher_background" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/movie_continue_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:background="#B31C1C1C"
+        android:padding="8dp"
+        android:textColor="@color/text_color_of_continue_watch_movie"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="15 минут" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
