--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="green_dark">#209b35</color>
     <color name="red_light">#FF4081</color>
 
+    <color name="primary_text_color">#000000</color>
+    <color name="text_color_of_continue_watch_movie">#FFFFFF</color>
+    <color name="icon_tint">#000000</color>
+
 </resources>
